<resources>
    <string name="app_name">Amigos de Barichara Mobile®</string>
    <string name="BARICHARA">BARICHARA</string>
    <string name="barichara_descripcion_pantalla_1">Barichara fue nombrada «El pueblo más bonito de Colombia», y el nombre, en dialecto Guane, significa lugar para el descanso. Con este curriculum no sorprende que nada más llegar a Barichara desde San Gil, a unos 25 kilómetros, te invada una sensación de paz y tranquilidad, al menos durante la semana, supongo que el fin de semana se llena de turistas.

El gentilicio es Baricharas o patiamarillos, de este último no he descubierto el porqué a pesar de buscarlo en Internet.
        La visité en 2009 y cuatro años después me pareció reconocer al mismo anciano sentado en el mismo banco de la misma plaza a la misma hora.
    </string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="camino_real">CAMINO REAL</string>
    <string name="boton_continue_main">CONTINUE</string>
    <string name="camino_real_description_pg1">El Camino Real que une Barichara y Guane fue declarado Monumento Nacional en 1977 y restaurado bajo un decreto de 1988. Los historiadores aseguran que era parte del Camino Real Centro-Oriental colombiano, que conectaba las rutas de Santafé de Bogotá, Tunja, Bucaramanga, Pamplona y Cúcuta, con bifurcaciones que conducían hacia Cartagena y Venezuela. </string>
    <string name="camino_real_descripcion_pg_3_1">Hay que subir a la parte alta del pueblo para tener las más hermosas vistas del mismo, con sus tejados armónicos en teja, y también del valle que comunica Barichara, a 1.300 msnm, con Guane, a 885 msnm, por lo que es recomendable recorrer el Camino Real en el sentido Barichara Guane, ya que en gran parte es cuesta abajo.</string>
    <string name="camino" />
    <string name="camino_real_descripcion_pg_3_2">El Camino Real no dejó de ser una pavimentación de los caminos milenarios de las comunidades chibchas, muiscas y guanes. En tiempos coloniales, la ruta imprimió un fuerte desarrollo económico a la región, ya que se comerciaba con tejidos, harina, maíz y sal por esta ruta hacia el occidente del país.

El camino se hizo con losas de piedra plana muy abundante en la región, y comienza en la zona alta de Barichara al lado del monumento a Bolivar, desde donde baja, cruza la carretera nueva a Guana, sube la montaña y desde la cumbre se puede ver el río y el pueblito Guane, para luego descender en zigzag.</string>
    <string name="cementerio">Cementerio La Inmaculada Concepción</string>
    <string name="cementerio_descripcion">El cementerio de Barichara es un museo al aire libre. Sobre un espacio natural de árboles, flores y prados, se refleja el arte, la historia y la tradición de los patiamarillos. A la entrada la réplica de ‘La última cena’, de Antonio Gaudí, elaborada por el escultor Arsenio Plata tallada en piedra. La variedad de tumbas muestran obras esculturales en piedra labrada, lapidas con tallas de figuras que recuerdan la labor que ejerció la persona en vida. Se exhiben en los muros del cementerio, antiguas cruces con diseños únicos en Forja.  Y  en la pared de tapia pisada de la casa, se conservan algunas lapidas muy antiguas y delicadas impresas en vidrio.</string>
    <string name="parque_artes_title">Parque de las artes Jorge Delgado Sierra</string>
    <string name="parque_artes_descripcion">El parque de las artes Jorge Delgado Sierra es un gran sitio el cual se encuentra justo al lado de la icónica Capilla de Santa Bárbara y comprende un museo al aire libre donde los visitantes pueden apreciar más de 20 esculturas talladas en piedra por artistas tanto locales como internacionales. El lugar hace homenaje al oficio del tallador en piedra, que ha proliferado en la región por generaciones y que se conserva hoy en día como una tradición y herencia artesana. Desde allí también se puede apreciar el Cañón del río Suárez y las montañas que lo acompañan.</string>
    <string name="login">login</string>
    <string name="sing_up">sing_up</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="registro">registro</string>
    <string name="nombre">nombre</string>
    <string name="apellidos">apellidos</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="phone">phone</string>
    <string name="date">date</string>
    <string name="genero">genero</string>
    <string name="enviar">enviar</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="foto_salto_del_mico">foto_salto_del_mico</string>
    <string name="salto_del_mico">salto_del_mico</string>
    <string name="start">Start</string>
    <string name="share">Share</string>
    <string name="chat">Chat</string>
    <string name="texto_mico">Este mirador natural est compuesto por un  conjunto de rocas que le permiten a los turistas tener una mirada nica de los hermosos paisajes igualmente es el lugar ideal para una buena foto cargada de adrenalina ademas desde el salto del mico podras apreciar el canon del rio suarez  y los municipios de zapatoca y galan</string>
    <string name="registro_sitios">Registro de un Sitio Turistico</string>
    <string name="name">Nombres</string>
    <string name="genero_femenino">Femenino</string>
    <string name="genero_masculino">Masculino</string>
    <string name="cascada">Cascada Juan Curi</string>
    <string name="cascadas_descripcion">Cascada de 200 mt de altura, que desciende por una parede rocosa, que parece formar una escalera, incrustadas en una selva virgen.</string>
    <string name="puntuacion">8.0</string>


</resources>

