<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".model.MainActivity13">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="#040303"
                android:fontFamily="@font/amaranth_bold_italic"
                android:includeFontPadding="false"
                android:text="@string/salto_del_mico"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/primero"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="285dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="false"
                android:background="@color/primero"
                android:backgroundTintMode="add"
                android:contentDescription="@string/foto_salto_del_mico"
                android:cropToPadding="true"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                app:srcCompat="@drawable/_491749037_318174_1491749210_noticia_normal" />
        </TableRow>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="47dp">

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black"
                android:contentDescription="@string/start"
                app:srcCompat="@android:drawable/star_big_off"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/imageButton14"
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black"
                android:contentDescription="@string/share"
                app:srcCompat="@android:drawable/ic_menu_share"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/imageButton15"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black"
                android:contentDescription="@string/chat"
                app:srcCompat="@android:drawable/sym_action_chat"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="329dp"
                android:layout_height="235dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#090909"
                android:fontFamily="@font/amaranth_bold_italic"
                android:text="@string/texto_mico"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold|italic"
                android:visibility="visible" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>